# MTools

./: .gitattributes  .gitignore  LICENSE  README.md  build.py  nuitka_build.bat  nuitka_build_dev.bat  nuitka_build_fast.bat  nuitka_build_release.bat  nuitka_flet.yml  pyproject.toml  requirements.txt  开发准则.md
.github/workflows/: build.yml
docs/: README.md  build_guide.md  font_selector_feature.md  图片格式转换功能说明.md  添加新工具指南.md
src/: main.py  tool_registry.py
src/assets/: icon.icns
src/components/: __init__.py  custom_title_bar.py  feature_card.py  tool_search.py
src/constants/: __init__.py  app_config.py  model_config.py
src/services/: __init__.py  auto_updater.py  config_service.py  encoding_service.py  face_detection_service.py  ffmpeg_service.py  frame_interpolation_service.py  global_hotkey_service.py  http_service.py  icp_service.py  id_photo_service.py  image_service.py  ocr_service.py  speech_recognition_service.py  subtitle_remove_service.py  translate_service.py  update_service.py  vocal_separation_service.py  weather_service.py
src/utils/: __init__.py  file_utils.py  gif_utils.py  logger.py  network_utils.py  nuitka_setup.py  onnx_helper.py  patch.py  platform_utils.py  tool_metadata.py  tool_registry.py  windows_drop.py
src/views/: __init__.py  audio_view.py  code_format_detail_view.py  code_format_view.py  dev_tools_view.py  encoding_convert_view.py  encoding_view.py  image_background_view.py  image_compress_view.py  image_crop_view.py  image_format_view.py  image_puzzle_merge_view.py  image_puzzle_split_view.py  image_resize_view.py  image_view.py  main_view.py  python_terminal_view.py  recommendations_view.py  settings_view.py  video_view.py
src/views/code_format/: code_format_view.py  detail_view.py
src/views/dev_tools/: __init__.py  base64_to_image_view.py  color_tool_view.py  cron_tool_view.py  crypto_tool_view.py  dev_tools_view.py  dns_lookup_view.py  encoder_decoder_view.py  encoding_convert_view.py  format_convert_view.py  http_client_view.py  json_viewer_view.py  jwt_tool_view.py  markdown_viewer_view.py  port_scanner_view.py  python_terminal_view.py  regex_tester_view.py  sql_formatter_view.py  text_diff_view.py  timestamp_tool_view.py  uuid_generator_view.py  websocket_client_view.py
src/views/encoding/: encoding_view.py
src/views/image/: __init__.py  background_view.py  compress_view.py  crop_view.py  enhance_view.py  format_view.py  gif_adjustment_view.py  image_tools_install_view.py  image_view.py  info_view.py  ocr_view.py  qrcode_view.py  remove_exif_view.py  resize_view.py  rotate_view.py  search_view.py  to_base64_view.py  watermark_remove_view.py  watermark_view.py
src/views/image/puzzle/: merge_view.py  puzzle_view.py  split_view.py
src/views/media/: __init__.py  audio_compress_view.py  audio_format_view.py  audio_speed_view.py  audio_to_text_view.py  audio_view.py  ffmpeg_install_view.py  media_view.py  screen_record_view.py  subtitle_remove_view.py  video_compress_view.py  video_convert_view.py  video_enhance_view.py  video_extract_audio_view.py  video_interpolation_view.py  video_repair_view.py  video_speed_view.py  video_subtitle_view.py  video_view.py  video_vocal_separation_view.py  video_watermark_view.py  vocal_extraction_view.py
src/views/others/: __init__.py  file_to_url_view.py  icp_query_view.py  id_photo_view.py  image_to_url_view.py  others_view.py  translate_view.py  windows_update_view.py
