[project]
name = "MTools"
version = "0.1.1"
description = "Multi-functional desktop application with media processing, encoding conversion, and more"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
# Don't hard-code the version, to avoid flet compilation issues.
dependencies = [
  "flet==0.28.3",
  "ffmpeg-python==0.2.0",
  "Pillow==12.0.0",
  "chardet==5.2.0",
  "opencv-python-headless==4.11.0.86",
  "numpy==1.26.4",
  "onnxruntime-directml==1.22.0",  # Windows 专用。macOS 用户请运行: uv remove onnxruntime-directml && uv add onnxruntime-silicon
  "websockets==12.0",  # 避免弃用警告，等待 flet 更新
  "qrcode[pil]==7.4.2",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "MTools"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "nuitka>=2.5.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
