[project]
name = "MTools"
version = "0.0.3-beta"
description = "Multi-functional desktop application with media processing, encoding conversion, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
authors = [
    { name = "MTools Developer", email = "1790233968@qq.com" }
]
# Don't hard-code the version, to avoid flet compilation issues.
dependencies = [
  "flet==0.28.3",
  "ffmpeg-python==0.2.0",
  "Pillow==12.0.0",
  "chardet==5.2.0",
  "opencv-python-headless==4.11.0.86",
  "numpy==1.26.4",
  # ONNX Runtime - 自动根据平台选择合适的版本
  "onnxruntime-directml==1.22.0 ; sys_platform == 'win32'", # Windows DirectML 加速 (兼容 sherpa-onnx)
  "onnxruntime==1.22.0 ; sys_platform == 'linux' or sys_platform == 'darwin'", # macOS (内置 CoreML) / Linux
  "websockets==12.0", # 避免弃用警告，等待 flet 更新
  "qrcode[pil]==7.4.2",
  "sherpa-onnx==1.12.18",
  "pyclipper==1.4.0",
  "shapely==2.1.2",
  "httpx[socks]==0.28.1",
  "dnspython==2.8.0",
  "PyYAML==6.0.2",
  "xmltodict==0.14.2",
  "pycryptodome==3.21.0",
  "sqlparse==0.5.3",
  "croniter==5.0.1",
  "tomli-w==1.1.0",  # TOML 写入支持（Python 3.11+ 内置 tomllib 只支持读取）
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.hgha"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "MTools"

# company name to display in about app dialogs
company = "MTools"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MTools Developer"

[tool.flet.app]
path = "src"

[dependency-groups]
dev = [
    "flet[all]==0.28.3",
    "flet-desktop==0.28.3",
    "nuitka>=2.5.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
